--- a/desafioL1/Base.lproj/Main.storyboard
+++ b/desafioL1/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="lqY-O2-QsV">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="lqY-O2-QsV">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -13,17 +14,17 @@
         <!--Filmes Recentes-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="EntryListViewController" customModule="desafioL1" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ListViewController" id="BYZ-38-t0r" customClass="ListViewController" customModule="desafioL1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="4fe-Ls-gFu">
-                                <rect key="frame" x="0.0" y="139" width="414" height="723"/>
+                                <rect key="frame" x="0.0" y="148" width="414" height="714"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="movieCell" rowHeight="245" id="H2n-I0-DLW" customClass="MovieTableViewCell" customModule="desafioL1" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="245"/>
+                                        <rect key="frame" x="0.0" y="50" width="414" height="245"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="H2n-I0-DLW" id="Uzg-sv-DID">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="245"/>
@@ -122,7 +123,7 @@
                                 </prototypes>
                             </tableView>
                             <searchBar contentMode="redraw" showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mSE-hY-oiS">
-                                <rect key="frame" x="0.0" y="88" width="414" height="51"/>
+                                <rect key="frame" x="0.0" y="92" width="414" height="56"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <scopeButtonTitles>
@@ -167,7 +168,7 @@
                                     <imageReference key="image" image="square.grid.3x3.fill" catalog="system" renderingMode="template"/>
                                 </buttonConfiguration>
                                 <connections>
-                                    <segue destination="Jod-Yu-TgI" kind="show" id="ha4-kr-iz2"/>
+                                    <action selector="toCollection:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hFY-2o-DSp"/>
                                 </connections>
                             </button>
                         </barButtonItem>
@@ -232,10 +233,10 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FVc-Ly-S5Q">
-                                                <rect key="frame" x="21" y="0.0" width="43.5" height="50"/>
+                                                <rect key="frame" x="21" y="0.0" width="39.5" height="50"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nr0-MG-z5N">
-                                                        <rect key="frame" x="8" y="0.0" width="27.5" height="50"/>
+                                                        <rect key="frame" x="8" y="0.0" width="23.5" height="50"/>
                                                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
@@ -251,7 +252,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y6s-mX-gvJ">
-                                                <rect key="frame" x="84.5" y="0.0" width="50" height="50"/>
+                                                <rect key="frame" x="80.5" y="0.0" width="50" height="50"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="⭐️" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pyV-2R-QjW">
                                                         <rect key="frame" x="8" y="0.0" width="34" height="50"/>
@@ -270,14 +271,14 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="chG-Y8-Pn3">
-                                                <rect key="frame" x="154.5" y="0.0" width="172" height="50"/>
+                                                <rect key="frame" x="150.5" y="0.0" width="172" height="50"/>
                                                 <color key="backgroundColor" red="0.12099781699999999" green="0.12099781699999999" blue="0.12099781699999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="60" id="tlc-d6-HuM"/>
                                                 </constraints>
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CUL-Hc-mwq">
-                                                <rect key="frame" x="346.5" y="0.0" width="46.5" height="50"/>
+                                                <rect key="frame" x="342.5" y="0.0" width="50.5" height="50"/>
                                                 <color key="backgroundColor" red="0.12099781699999999" green="0.12099781699999999" blue="0.12099781699999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="35" id="71A-Hm-1EY"/>
@@ -599,7 +600,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1YF-1c-PBA" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="zjs-0H-8AH">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <textAttributes key="titleTextAttributes">
@@ -618,13 +619,13 @@
         <!--Filmes Recentes-->
         <scene sceneID="3z9-ld-YTF">
             <objects>
-                <viewController id="Jod-Yu-TgI" customClass="EntryCollectionViewController" customModule="desafioL1" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CollectionViewController" id="Jod-Yu-TgI" customClass="CollectionViewController" customModule="desafioL1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="6Il-aS-Xal">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4KC-Bf-To7">
-                                <rect key="frame" x="27" y="149" width="360" height="703"/>
+                                <rect key="frame" x="27" y="114" width="360" height="738"/>
                                 <color key="backgroundColor" red="0.079509330109999998" green="0.079509330109999998" blue="0.079509330109999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="xSe-In-FEw">
                                     <size key="itemSize" width="128" height="128"/>
@@ -727,7 +728,7 @@
                                 </cells>
                             </collectionView>
                             <searchBar contentMode="redraw" showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SAc-bw-ixv">
-                                <rect key="frame" x="0.0" y="88" width="414" height="51"/>
+                                <rect key="frame" x="0.0" y="48" width="414" height="56"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <scopeButtonTitles>
@@ -790,14 +791,14 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Ss4-rX-Lyg"/>
+        <segue reference="r5t-eF-RDM"/>
     </inferredMetricsTieBreakers>
     <resources>
-        <image name="arrow.clockwise" catalog="system" width="115" height="128"/>
-        <image name="list.bullet" catalog="system" width="128" height="88"/>
-        <image name="paperplane.fill" catalog="system" width="128" height="118"/>
+        <image name="arrow.clockwise" catalog="system" width="113" height="128"/>
+        <image name="list.bullet" catalog="system" width="128" height="87"/>
+        <image name="paperplane.fill" catalog="system" width="128" height="119"/>
         <image name="sim" width="185.03999328613281" height="133.39999389648438"/>
-        <image name="square.grid.3x3.fill" catalog="system" width="128" height="112"/>
+        <image name="square.grid.3x3.fill" catalog="system" width="128" height="113"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
